[package]
name = "reverse_ws_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tracing-subscriber = "0.3"
axum = { version = "0.7", features = ["ws"] }
uuid = { version = "1.7", features = ["v4"] }
parking_lot = "0.12"
env_logger = "0.11"
log = "0.4"
futures = "0.3"